fix username too long

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -135,10 +135,12 @@ body {
     float:left; height:35px; margin-top:5px; text-align:center; cursor:pointer;
 }
 #global_header .user_info .uinfo .name #goldLink a{
+  margin-left: 5px;
     font-size:14px; color:#ffffff;font-weight:bold;font-family:Verdana; white-space:nowrap;
-    height:40px; width:120px; display:block;line-height:40px; overflow:hidden;
+    height:40px; width:110px; display:block;line-height:40px; overflow:hidden;
 }
-#global_header .user_info .uinfo .name #goldLink a.nameh{
+#global_header .user_info .uinfo .name #goldLink.nameh{
+  width: 120px;
   position: absolute;
   z-index: 300;
   background: #FFFEFF;
@@ -147,10 +149,12 @@ body {
   border-style: solid;
   border-color: #D5D5D5;
   box-shadow: 3px 0 0px 0px rgba(0, 0, 0, 0.1);
-  text-decoration: none;
-  color: #000;
     /*position:absolute;color:#000000;background:url(/static/images/user.png) no-repeat;*/
     /*text-decoration:none;z-index:300;*/
+}
+#global_header .user_info .uinfo .name #goldLink.nameh a{
+  color: #000;
+  text-decoration: none;
 }
 #global_header .user_info .uinfo .myexfe {
     display: none;
